# readmeai

./: .gitignore  README.md  pyproject.toml
readmeai/: errors.py  logger.py  main.py
readmeai/config/: constants.py  settings.py
readmeai/config/settings/: docs_list.toml
readmeai/generators/: badges.py  builder.py  quickstart.py
readmeai/ingestion/: file_processor.py  metadata_extractor.py  pipeline.py
readmeai/models/: base.py  factory.py  llama.py  prompts.py  tokens.py  vsegpt.py
readmeai/parsers/: base.py  cpp.py  docker.py  go.py  gradle.py  maven.py  npm.py  python.py  rust.py  swift.py
readmeai/postprocessor/: response_cleaner.py
readmeai/readers/git/: metadata.py  providers.py  repository.py
readmeai/readmegen_article/generators/: builder.py
readmeai/readmegen_article/models/: prompts.py
readmeai/readmegen_article/parser/: article_finder.py
readmeai/templates/: contributing.py  header.py  quickstart.py
readmeai/utils/: file_handler.py  file_resource.py
readmegen_article/config/: settings.py
readmegen_article/generators/: builder.py
readmegen_article/models/: prompts.py
readmegen_article/parser/: article_finder.py
readmegen_article/templates/: header.py
