[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readmeai"
version = "0.1.0"
description = "README generator"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.11.11",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "PyYAML==6.0.2",
    "pydantic-extra-types==2.9.0",
    "pydantic==2.10.5",
    "requests==2.32.3",
    "structlog==24.4.0",
    "tiktoken==0.8.0",
    "tomli==2.2.1",
]

[tool.setuptools.packages.find]
include = ["readmeai", "readmeai.*"]

[tool.setuptools.package-data]
"readmeai" = [
    "generators/svg/shieldsio_icons.json",
    "generators/svg/skill_icons.json",
    "config/settings/commands.toml",
    "config/settings/contributing_config.toml",
    "config/settings/docs_list.toml",
    "config/settings/ignore_list.toml",
    "config/settings/languages.toml",
    "config/settings/parsers.toml",
    "config/settings/quikstart.toml",
    "config/settings/quickstart_config.toml",
    "config/settings/tool_config.toml",
    "config/settings/tooling.toml",
]